# rust-debug-web

./: .env  Cargo.toml  watch.toml
src/: app_config.rs  errors.rs  main.rs
src/models/: bug_log.rs  mod.rs  user.rs
